--- a/CalOrdersServices/nbproject/project.properties
+++ b/CalOrdersServices/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -28,6 +29,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-lang3-3.1.jar=../libs/commons-lang3-3.1/commons-lang3-3.1.jar
+file.reference.commons-logging-1.1.3.jar=../libs/commons-logging-1.1.3/commons-logging-1.1.3.jar
+file.reference.junit-4.12.jar=../libs/junit-4.12.jar
+file.reference.log4j-1.2.17.jar=../libs/apache-log4j-1.2.17/log4j-1.2.17.jar
+file.reference.mockito-core-2.0.53-beta.jar=../libs/mockito-core-2.0.53-beta.jar
+file.reference.objenesis-2.1.jar=../libs/objenesis-2.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,13 +48,22 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.CalOrdersCore.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.commons-lang3-3.1.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.mockito-core-2.0.53-beta.jar}:\
+    ${file.reference.objenesis-2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -70,8 +86,11 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.CalOrdersCore=../CalOrdersCore
 project.license=TempusLicenseTemplate_1
+reference.CalOrdersCore.jar=${project.CalOrdersCore}/dist/CalOrdersCore.jar
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
