--- a/CalOrdersJET/nbproject/project.properties
+++ b/CalOrdersJET/nbproject/project.properties
@@ -1,6 +1,7 @@
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=true
 files.encoding=UTF-8
+project.license=mit
 run.as=node.js
 site.root.folder=
 source.folder=
