--- a/CalOrdersRest/nbproject/private/private.properties
+++ b/CalOrdersRest/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=/home/oncore/payara41/glassfish/domains/payaradomain
 j2ee.server.home=/home/oncore/payara41/glassfish
 j2ee.server.instance=[/home/oncore/payara41/glassfish:/home/oncore/payara41/glassfish/domains/payaradomain]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/home/oncore/payara41
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/oncore/.netbeans/8.2/build.properties
