--- a/CalOrdersRest/nbproject/project.properties
+++ b/CalOrdersRest/nbproject/project.properties
@@ -29,6 +29,15 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.byte-buddy-1.3.16.jar=../libs/byte-buddy-1.3.16.jar
+file.reference.commons-lang3-3.1.jar=../libs/commons-lang3-3.1/commons-lang3-3.1.jar
+file.reference.commons-logging-1.1.3.jar=../libs/commons-logging-1.1.3/commons-logging-1.1.3.jar
+file.reference.hamcrest-core-1.3.jar=../libs/hamcrest-core-1.3.jar
+file.reference.hamcrest-library-1.3.jar=../libs/hamcrest-library-1.3.jar
+file.reference.junit-4.12.jar=../libs/junit-4.12.jar
+file.reference.log4j-1.2.17.jar=../libs/apache-log4j-1.2.17/log4j-1.2.17.jar
+file.reference.mockito-core-2.0.53-beta.jar=../libs/mockito-core-2.0.53-beta.jar
+file.reference.objenesis-2.1.jar=../libs/objenesis-2.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +51,17 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.commons-lang3-3.1.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.byte-buddy-1.3.16.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.hamcrest-library-1.3.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.mockito-core-2.0.53-beta.jar}:\
+    ${file.reference.objenesis-2.1.jar}:\
+    ${reference.CalOrdersCore.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -71,9 +90,11 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
+project.CalOrdersCore=../CalOrdersCore
+project.license=mit
+reference.CalOrdersCore.jar=${project.CalOrdersCore}/dist/CalOrdersCore.jar
 resource.dir=setup
 rest.config.type=ide
 run.test.classpath=\
