[#139504917][#139505609] building navigation and integrating login checkpoint

--- a/CalOrdersRest/nbproject/project.properties
+++ b/CalOrdersRest/nbproject/project.properties
@@ -93,7 +93,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.CalOrdersCore=../CalOrdersCore
-project.license=mit
+project.license=oncoremit_license
 reference.CalOrdersCore.jar=${project.CalOrdersCore}/dist/CalOrdersCore.jar
 resource.dir=setup
 rest.config.type=ide
