--- a/CalOrdersRest/nbproject/project.properties
+++ b/CalOrdersRest/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.byte-buddy-1.3.16.jar=../libs/byte-buddy-1.3.16.jar
+file.reference.commons-collections4-4.1.jar=../libs/commons-collections4-4.1.2/commons-collections4-4.1.jar
 file.reference.commons-lang3-3.1.jar=../libs/commons-lang3-3.1/commons-lang3-3.1.jar
 file.reference.commons-logging-1.1.3.jar=../libs/commons-logging-1.1.3/commons-logging-1.1.3.jar
 file.reference.hamcrest-core-1.3.jar=../libs/hamcrest-core-1.3.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.mockito-core-2.0.53-beta.jar}:\
     ${file.reference.objenesis-2.1.jar}:\
-    ${reference.CalOrdersCore.jar}
+    ${reference.CalOrdersCore.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
