--- a/Dockerfile.CalOrdersRest
+++ b/Dockerfile.CalOrdersRest
@@ -1,22 +1,20 @@
 FROM payara/server-full
 MAINTAINER kpoland kyle.poland@oncorellc.com
 
-# TODO pull these if they don't prove necessary
-#RUN apt-get -qq update && \
-#    apt-get install -qqy less --no-install-recommends && \
-#    apt-get install -qqy vim --no-install-recommends && \
+USER root
+RUN apt-get -qq update && \
+    apt-get install -qqy less --no-install-recommends && \
+    apt-get install -qqy vim --no-install-recommends
 #    apt-get install -qqy mysql-client --no-install-recommends
-#RUN echo "set -o vi" >> /root/.bashrc
-#RUN echo "US/Pacific-New" > /etc/timezone && dpkg-reconfigure --frontend noninteractive tzdata
+RUN echo "set -o vi" >> /root/.bashrc
+RUN echo "US/Pacific-New" > /etc/timezone && dpkg-reconfigure --frontend noninteractive tzdata
+USER payara
 
-# one lib and one module into glassfish in the container
-# TODO this was needed in glassfish, assume it is necessary in payara41
+# mysql jar into payara for the connection to the database 
 COPY libs/mysql/mysql-connector-java-5.1.38-bin.jar /opt/payara41/glassfish/lib/
 
-# log4j.properties into the glassfish domain
-# TODO not sure which of these domains we are using
+# log4j.properties into the payara domain
 COPY docker/log4j.properties /opt/payara41/glassfish/domains/domain1/lib/classes/
-COPY docker/log4j.properties /opt/payara41/glassfish/domains/payaradomain/lib/classes/
 
 # placeholder ENV variables for database connections to override at runtime
 ENV databasename somedatabase
@@ -24,17 +22,15 @@ ENV databaseuser someuser
 ENV databasepassword somepassword
 
 # entrypoint start script that starts glassfish, installs the EAR, stops glassfish, then starts glassfish
-COPY docker/start_payara.sh /opt/payara41/deployments/
-# make sure it has unix line endings and is executable
-RUN /bin/sed -i -e 's/\r$//' /opt/payara41/deployments/start_payara.sh && /bin/chmod +x /opt/payara41/deployments/start_payara.sh
+# TODO see if we can do without the start script
+#COPY docker/start_payara.sh /opt/payara41/deployments/
+#RUN /bin/sed -i -e 's/\r$//' /opt/payara41/deployments/start_payara.sh && /bin/chmod +x /opt/payara41/deployments/start_payara.sh
 
 # copy built WARs into the container
-COPY CalOrdersRest/dist/CalOrdersRest.war /opt/payara41/deployments/
+COPY CalOrdersRest/dist/CalOrdersRest.war /opt/payara41/glassfish/domains/domain1/autodeploy
 
 # TODO what is this for?
-RUN /bin/mkdir /home/oncore && /bin/ln -s /opt/payara41/ /home/oncore/payara41
+#RUN /bin/mkdir /home/oncore && /bin/ln -s /opt/payara41/ /home/oncore/payara41
 
-EXPOSE 4848
-EXPOSE 8080
-
-CMD ["/opt/payara41/deployments/start_payara.sh"]
+# TODO do without the start script
+#CMD ["/opt/payara41/deployments/start_payara.sh"]
