new way to start JET container

--- a/Dockerfile.CalOrdersJET
+++ b/Dockerfile.CalOrdersJET
@@ -4,5 +4,12 @@ LABEL maintainer "kyle.poland@oncorellc.com"
 # set timezone
 RUN echo "US/Pacific-New" > /etc/timezone && /usr/sbin/dpkg-reconfigure --frontend noninteractive tzdata
 
+# placeholder ENV variables for database connections to override at runtime
+ENV serviceshostname somehostname
+
+# copy start script into the container
+COPY docker/start_httpd.sh /
+RUN /bin/chmod +x /start_httpd.sh
+
 # web content into container
 COPY CalOrdersJET/web /usr/local/apache2/htdocs/
