--- a/CalOrdersCore/nbproject/project.properties
+++ b/CalOrdersCore/nbproject/project.properties
@@ -54,7 +54,7 @@ javac.test.classpath=\
     ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
+javadoc.additionalparam=-cp /home/oncore/workspaces/CalOrders/libs/apache-log4j-1.2.17/log4j-1.2.17.jar:/home/oncore/workspaces/CalOrders/libs/commons-lang3-3.1/commons-lang3-3.1.jar:/home/oncore/workspaces/CalOrders/libs/commons-logging-1.1.3/commons-logging-1.1.3.jar:/home/oncore/workspaces/CalOrders/libs/commons-collections4-4.1.2/commons-collections4-4.1.ja
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
