--- a/CalOrdersCore/nbproject/project.properties
+++ b/CalOrdersCore/nbproject/project.properties
@@ -64,7 +64,7 @@ javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
+javadoc.windowtitle=CalOrdersCore
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
