--- a/CalOrdersRest/nbproject/project.properties
+++ b/CalOrdersRest/nbproject/project.properties
@@ -90,7 +90,7 @@ javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=CalOrders
+javadoc.windowtitle=CalOrdersREST
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
