remove appd monitoring temporarily

--- a/Dockerfile.CalOrdersRest
+++ b/Dockerfile.CalOrdersRest
@@ -37,7 +37,7 @@ RUN /bin/chown payara:payara /opt/payara41/start_payara.sh && \
 # copy AppDynamics monitoring agent into the container and install it
 RUN /bin/mkdir /opt/appdynamics
 COPY docker/AppServerAgent-4.2.12.1.zip /opt/appdynamics
-RUN cd /opt/appdynamics && /usr/bin/unzip /opt/appdynamics/AppServerAgent-*.zip
+RUN cd /opt/appdynamics && /usr/bin/unzip /opt/appdynamics/AppServerAgent-*.zip && /bin/chmod -R 777 /opt/appdynamics
 
 # copy built WAR into the container
 COPY CalOrdersRest/dist/CalOrdersRest.war /
