move REST services to another VM to run on port 80

--- a/Dockerfile.CalOrdersJET
+++ b/Dockerfile.CalOrdersJET
@@ -6,6 +6,7 @@ RUN echo "US/Pacific-New" > /etc/timezone && /usr/sbin/dpkg-reconfigure --fronte
 
 # placeholder ENV variables for database connections to override at runtime
 ENV SERVICESHOSTNAME somehostname
+ENV SERVICESPORT someport
 
 # copy start script into the container
 COPY docker/start_httpd.sh /
