--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,3 +6,11 @@ engines:
 ratings:
   paths:
   - "**.java"
+  - "CalOrdersJET/src/js/common/*.js"
+  - "CalOrdersJET/src/js/data/*.js"
+  - "CalOrdersJET/src/js/reference/*.js"
+  - "CalOrdersJET/src/js/utils/*.js"
+  - "CalOrdersJET/src/js/viewModels/*.js"
+  - "CalOrdersJET/src/js/viewModels/*.js"
+  - "CalOrdersJET/src/js/appController.js"
+  - "CalOrdersJET/src/js/main.js"
