--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -5,7 +5,8 @@ engines:
   duplication:
     enabled: true
     config:
-      - javascript:
+      languages:
+        javascript:
   csslint:
     enabled: true
 
